--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -23,15 +23,22 @@ display: flex;
     background-color: #86EE75;;
     height: 100px ;
     width: 100px;
-    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 15%;
+    box-shadow: 0px 6px 4px rgba(13, 14, 13, 0.62);
+    border-radius: 20%;
 }
 
 .red{
     background-color: white;;
     height: 100px ;
     width: 100px;
-    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 15%;
+    box-shadow: 0px 6px 4px rgba(13, 14, 13, 0.62);
+    border-radius: 20%;
 
+}
+
+.fa-user-astronaut{
+    font-size: 40px;
+    display: flex;
+    justify-content: right;
+    padding-inline: inherit;
 }
