--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -20,7 +20,7 @@ display: flex;
 }
 
 .green{
-    background-color: #86EE75;;
+    background-color: #86EE75;
     height: 100px ;
     width: 100px;
     box-shadow: 0px 6px 4px rgba(13, 14, 13, 0.62);
@@ -28,7 +28,7 @@ display: flex;
 }
 
 .red{
-    background-color: white;;
+    background-color: white;
     height: 100px ;
     width: 100px;
     box-shadow: 0px 6px 4px rgba(13, 14, 13, 0.62);
