--- a/frontend/src/components/Card/CardStyle.css
+++ b/frontend/src/components/Card/CardStyle.css
@@ -60,3 +60,14 @@
     font-style: italic;
     color: rgba(38, 26, 12, 0.7);
 }
+
+.card ul > li{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-top: 2px solid white;
+    padding: 5px;
+    font-size:20px;
+    font-weight: 600;
+}
