--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -19,23 +19,25 @@ display: flex;
 
 }
 
-.green{
-    background-color: #86EE75;
-    height: 100px ;
-    width: 100px;
-    box-shadow: 0px 6px 4px rgba(13, 14, 13, 0.62);
-    border-radius: 20%;
-}
 
-.red{
+.red, .green{
     background-color: white;
     height: 100px ;
     width: 100px;
-    box-shadow: 0px 6px 4px rgba(13, 14, 13, 0.62);
+    box-shadow: 1px 1px 6px 0px rgb(13 14 13);
     border-radius: 20%;
+    border: none;
 
 }
 
+button.red.active{
+    background-color: #FE7373;
+}
+
+button.green.active{
+    background-color: #86EE75;
+
+}
 .fa-user-astronaut{
     font-size: 40px;
     display: flex;
