--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,7 +1,9 @@
-.footer{
+.footer {
     position: fixed ;
+    left: 0;
     bottom: 0 ;
-    width: 100vw ;
+    width: 100vw;
+    margin: 0;
     min-height: 5vh;
     background: #96B8D0;
 }
