--- a/frontend/src/components/Form/Form.css
+++ b/frontend/src/components/Form/Form.css
@@ -3,30 +3,30 @@
     margin: 0px;
 }
 .button-icon{
-position: absolute;
-width: 40px;
-height: 40px;
-left: 320px;
-top: 30px;
-background: #FFFFFF;
-border: 0.5px solid #000000;
-box-sizing: border-box;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 11px;
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    left: 320px;
+    top: 30px;
+    background: #FFFFFF;
+    border: 0.5px solid #000000;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 11px;
 }
 
 .fa-circle-check{
-position: absolute;
-left: 10%;
-right: 9%;
-top: 20%;
-bottom: 90%;
-font-size: 25px;
-background: #000000;
+    position: absolute;
+    left: 10%;
+    right: 9%;
+    top: 20%;
+    bottom: 90%;
+    font-size: 25px;
+    background: #000000;
 }
 
 h1{
-     width: 100%;
+     width: 15em;
      height: 30px;
      margin: 50px 5px;
      font-style: normal;
@@ -40,13 +40,15 @@ h1{
 .form{
     font-size: 13px;
     position: fixed;
-    width: 20px;
+    width: 140px;
     height: 16px;
     left: 48px;
     top: 100px;
+
 }
 .input{
-    width: 328px;
+    margin: 5px;
+    width: 230%;
     height: 25px;
     left: 47px;
     top: 170px;
@@ -54,6 +56,7 @@ h1{
     background: #FFFFFF;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.34);
     border-radius: 6px;
+
 }
 .text{
     width: 300px;
@@ -63,17 +66,20 @@ h1{
     background: #FFFFFF;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.34);
     border-radius: 6px;
+
 }
 .button-select {
-    display: flex;
-    flex-wrap:;
-    justify-content: space-evenly;
-    width: 161px;
-    height: 25px;
-    left: 49px;
-    top: 300px;
-
+    margin: 5px;
+    width: 60px;
+    height: 40px;
+    left: 50px;
+    top: 100px;
     background: #FFFFFF;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.34);
     border-radius: 6px;
+
+}
+
+label {
+    float: left;
 }
