--- a/frontend/src/components/Form/Form.css
+++ b/frontend/src/components/Form/Form.css
@@ -1,6 +1,6 @@
 .container{
     background: #FFFFFF;
-    margin: 0px;
+    margin: 0;
 }
 .button-icon{
     position: absolute;
@@ -11,7 +11,7 @@
     background: #FFFFFF;
     border: 0.5px solid #000000;
     box-sizing: border-box;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 11px;
 }
 
@@ -25,7 +25,7 @@
     background: #000000;
 }
 
-h1{
+h1  {
      width: 15em;
      height: 30px;
      margin: 50px 5px;
