--- a/frontend/src/components/ACobrarCard/ACobrarCardStyle.css
+++ b/frontend/src/components/ACobrarCard/ACobrarCardStyle.css
@@ -71,3 +71,19 @@
     font-size:20px;
     font-weight: 600;
 }
+
+.menu {
+    position: absolute;
+    right: 2%;
+    top:10%;
+    border: black;
+    background: white;
+    margin: 0;
+    border-radius: 5px;
+    padding: 2px;
+    z-index: 10;
+}
+
+.menu > ul > li:active {
+    background-color: #e8e6e6;
+}
