--- a/frontend/src/components/APagarCard/APagarCard.css
+++ b/frontend/src/components/APagarCard/APagarCard.css
@@ -1,44 +1,18 @@
-.MuiAccordionSummary-content  > * {
-    display: flex;
-}
 
-.MuiAccordionSummary-content {
-    display: flex;
-    flex-direction: column;
-}
-.card {
+.card2 {
+    background-color:#D6EADF;
+    padding: 10px;
     border-bottom: 0.5px solid #0E7AC6;
-    padding: 0 0.5rem 0.5rem;
-}
-
-.MuiAccordionSummary-root {
-    position: relative;
-}
-
-.MuiAccordionSummary-expandIconWrapper {
-    position: absolute;
-    top: 10%;
-    right: 5%;
 
 }
 
-.MuiAccordionSummary-expandIconWrapper > .fa-ellipsis {
-    color: black;
-}
-
-
-.css-o4b71y-MuiAccordionSummary-content > .date-amount{
-    margin-top: -10px;
-    align-items: center;
-    justify-content: space-between;}
-
-.title {
+.title2 {
     font-size: 22px;
     font-weight: 500;
     justify-items: flex-end;
 }
 
-.title p {
+.title2 p {
     margin: 0;
     padding: 0;
 }
@@ -50,24 +24,27 @@
     justify-content: space-between ;
 }
 
-.amount {
-    font-size: 30px;
-    font-weight: 500;
-}
 
-.date {
+.date2 {
     font-size: 15px;
     font-style: italic;
     color: rgba(38, 26, 12, 0.7);
+    display: flex;
+    justify-content: left;
 }
 
-.card ul > li{
+.card2 ul > li{
     list-style: none;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border-top: 2px solid white;
     padding: 5px;
     font-size:20px;
     font-weight: 600;
+}
+
+.date-title{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
