--- a/frontend/src/components/Form/Form.css
+++ b/frontend/src/components/Form/Form.css
@@ -68,16 +68,15 @@ h1  {
     border-radius: 6px;
 
 }
-.button-select {
-    margin: 5px;
-    width: 60px;
-    height: 40px;
-    left: 50px;
-    top: 100px;
-    background: #FFFFFF;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.34);
-    border-radius: 6px;
 
+.red, .green{
+    background-color: white;
+    height: 40px ;
+    width: 70px;
+    box-shadow: 1px 1px 4px 0 rgb(13 14 13);
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
 }
 
 label {
