estilos boton form separacion

--- a/frontend/src/components/Form/Form.css
+++ b/frontend/src/components/Form/Form.css
@@ -72,7 +72,7 @@ h1  {
 .rojo, .verde {
     background-color: white;
     height: 40px ;
-    width: 70px;
+    width: 100px;
     box-shadow: 1px 1px 4px 0 rgb(13 14 13);
     border-radius: 6px;
     border: none;
@@ -81,4 +81,13 @@ h1  {
 
 label {
     float: left;
+}
+
+.botonForm{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 10px;
+    width: 200%;
+    padding: 10px;
+
 }
