--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f5faff;
+  text-shadow: none;
 }
 
 code {
