--- a/frontend/src/components/ACobrarCard/ACobrarCardStyle.css
+++ b/frontend/src/components/ACobrarCard/ACobrarCardStyle.css
@@ -19,7 +19,6 @@ div.cardList > div{
 }
 
 .card {
-    background-color: #2C5725;
     padding: 0 0.5rem 0.5rem;
 }
 .css-1elwnq4-MuiPaper-root-MuiAccordion-root:before {
@@ -27,7 +26,7 @@ div.cardList > div{
 }
 
 .css-1elwnq4-MuiPaper-root-MuiAccordion-root {
-    box-shadow: 2px 3px 1px -2px rgb(0 0 0 / 20%), 2px 2px 7px 0px rgb(0 0 0 / 14%), 0px 3px 3px 0px rgb(0 0 0 / 12%);
+    box-shadow: 2px 3px 1px -2px rgb(0 0 0 / 20%), 2px 2px 7px 0 rgb(0 0 0 / 14%), 0 3px 3px 0 rgb(0 0 0 / 12%);
 }
 .MuiAccordionSummary-root {
     position: relative;
