añadidas categorias e iconos a los eventos

--- a/frontend/src/components/ACobrarCard/ACobrarCardStyle.css
+++ b/frontend/src/components/ACobrarCard/ACobrarCardStyle.css
@@ -60,7 +60,14 @@ div.cardList > div{
     margin: 0;
     padding: 0;
     text-align: left;
-    width: 70%;
+    width: 170px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.MuiAccordionSummary-content.Mui-expanded.MuiAccordionSummary-contentGutters.css-o4b71y-MuiAccordionSummary-content > div > div > div > p {
+    white-space: initial;
 }
 
 .friends-paid {
@@ -75,12 +82,6 @@ div.cardList > div{
     font-weight: 700;
 }
 
-.date {
-    font-size: 15px;
-    font-style: italic;
-    color: rgba(38, 26, 12, 0.7);
-}
-
 .card ul > li{
     list-style: none;
     display: flex;
@@ -89,6 +90,32 @@ div.cardList > div{
     padding: 5px;
     font-size:20px;
     font-weight: 600;
+}
+
+.date {
+    display: flex;
+    font-size: 15px;
+    font-style: italic;
+    color: rgba(38, 26, 12, 0.7);
+    align-self: end;
+}
+
+.css-o4b71y-MuiAccordionSummary-content > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.css-o4b71y-MuiAccordionSummary-content > div > div {
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+.css-o4b71y-MuiAccordionSummary-content > div > div > img {
+    width: 30px;
+    height: 40px
 }
 
 .menu {
