--- a/frontend/src/components/Form/Form.css
+++ b/frontend/src/components/Form/Form.css
@@ -54,9 +54,14 @@ h1  {
     padding: 5px;
     background: #FFFFFF;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.34);
-    border-radius: 6px;
-}
 
+}
+.select{
+    margin:20px;
+    width: 240%;
+    left: -16px;
+    background: #FFFFFF;
+}
 .text{
     width: 300px;
     left: 47px;
