color en main y footer boton

--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -3,12 +3,13 @@
     bottom: 0 ;
     width: 100%;
     min-height: 5vh;
-    background-color: #891717;
-
 }
 
 .fa-circle-plus {
     color: #346ea8;
     font-size: 40px;
     padding: 5px;
+    border-radius: 50px;
+    background: rgb(131,58,180);
+    background: linear-gradient(180deg, rgba(131,58,180,1) 0%, rgba(253,29,29,0.7) 50%, rgba(252,176,69,1) 100%);
 }
