--- a/frontend/src/components/MainPage/MaiPage.css
+++ b/frontend/src/components/MainPage/MaiPage.css
@@ -1,7 +1,7 @@
 .main-container {
-    background-color: #891717;
     display: flex;
     align-items: center;
     flex-direction: column;
-
+    background: rgb(63,94,251);
+    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 }
