--- a/frontend/src/components/MainPage/MaiPage.css
+++ b/frontend/src/components/MainPage/MaiPage.css
@@ -2,6 +2,5 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    background: rgb(63,94,251);
-    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+    background: linear-gradient(143.31deg, #4FC8FC 15.48%, #0067A2 85.21%);
 }
