--- a/frontend/src/components/MainPage/MaiPage.css
+++ b/frontend/src/components/MainPage/MaiPage.css
@@ -2,5 +2,5 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    background: linear-gradient(143.31deg, #4FC8FC 15.48%, #0067A2 85.21%);
+    background: #FFFFFF;
 }
