cambios de estilo y enrutamiento de welcome

--- a/frontend/src/components/ACobrarCard/ACobrarCardStyle.css
+++ b/frontend/src/components/ACobrarCard/ACobrarCardStyle.css
@@ -122,3 +122,8 @@
 .menu > ul > li:active {
     background-color: #e8e6e6;
 }
+
+div.MuiAccordionSummary-content.MuiAccordionSummary-contentGutters.css-17o5nyn > div:nth-child(1) > div {
+    display: flex;
+    gap: 15px;
+}
