--- a/frontend/src/components/Form/Form.css
+++ b/frontend/src/components/Form/Form.css
@@ -36,6 +36,7 @@ h1  {
      font-style: normal;
      font-weight: 600;
      font-size: 26px;
+    text-align: center;
 
  }
 
@@ -52,9 +53,13 @@ h1  {
 }
 
 input {
-    width: 100%;
     height: 50px;
     text-indent: 10px;
+    width: 100%;
+    border: none;
+    border-radius: 9px;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 .input:not(input){
@@ -66,8 +71,11 @@ input {
 }
 
 .select{
-    padding: 0.5px;
-    background: #FFFFFF;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    box-shadow: none;
+    border-radius: 5px;
 }
 
 label {
@@ -95,6 +103,23 @@ label {
     width: 100%;
     padding: 10px;
 }
-.boton-guardar{
 
+div > form > div:nth-child(3) > div > a > button, div > form > div.tittle > div > div > a > button {
+    border: none;
+    box-shadow: 0px 1px 1px 1px rgb(0 0 0 / 6%);
+    background-color: white;
+    padding: 15px;
+    border-radius: 20px;
+}
+
+div > form > div:nth-child(3) > div > a > button:hover {
+    background-color: #f4f4f4;
+}
+button.boton-guardar{
+    padding: 15px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    background: white;
+    border: none;
+    box-shadow: 0 1px 1px 1px rgb(0 0 0 / 6%);
 }
