--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,9 +1,8 @@
 .footer {
-    position: fixed ;
+    position: sticky ;
     bottom: 0 ;
-    width: 40%;
+    width: 100%;
     min-height: 3vh;
-    border-radius: 70px;
     background: rgba(231,72,234,1);
     background: -moz-linear-gradient(45deg, rgba(231,72,234,1) 0%, rgba(75,26,188,1) 100%);
     background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(231,72,234,1)), color-stop(100%, rgba(75,26,188,1)));
